hue/hue/base/hue-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hue
spec:
  selector:
    deployment: hue
  ports:
    - name: 8000-tcp
      port: 8000
      protocol: TCP
      targetPort: 8000
